quick-start/overlays/uat/quick-start.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-start
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/runtime: quarkus
spec:
  replicas: 5
  selector:
    matchLabels:
      app: quick-start
  template:
    metadata:
      labels:
        app: quick-start
    spec:
      containers:
        - name: demo
          image: quay.io/mcombi/quarkus-getting-started:latest
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
