quick-start/overlays/uat/replicas.yaml
apiVersion: apps/v1
kind: Deployment
***REMOVED***
  name: quick-start
***REMOVED***
    app.openshift.io/runtime: quarkus
    app: quick-start
    app-with-metrics: quick-start
spec:
  replicas: 5
  selector:
    matchLabels:
      app: quick-start
