quick-start/overlays/uat/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
***REMOVED***
  name: quick-start-route-uat
***REMOVED***
    app: quick-start
    app.kubernetes.io/instance: quick-start
spec:
  to:
    kind: Service
    name: quick-start-service
    weight: 100
  port:
    targetPort: server
  wildcardPolicy: None
